--- a/style/style.css
+++ b/style/style.css
@@ -58,10 +58,10 @@
   padding-left: 20px;
   padding-top: 0px;
   color: #FFF;
-  font-size: 85px; 
+  font-size: 85px;
 }
 
- .image{
+.image {
   display: flex;
   justify-content: space-between;
   background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/Vectorrr.png');
@@ -72,13 +72,7 @@
   background-position: center;
   background-size: cover;
   padding: 40px;
-  border-radius: 5px;  
-}
-.group-img{
-  /* background-color: radial-gradient(50% 50% at 50% 50%, #690B02 27%, #8F4941 39%, #B18079 51%, #CDADA8 62%, #E3D1CD 73%, #F2EAE7 84%, #FCFAF6 93%, #FFFFFC 100%); */
-  /* background-blend-mode: multiply; */
-  /* mix-blend-mode: multiply; */
-  
+  border-radius: 5px;
 }
 
 .vector-textt {
@@ -87,11 +81,15 @@
 }
 
 .join {
-  color: #FFF;
-  padding-top: 10px;
-  padding-left: 100px;
-  font-size: 20px;
+  margin: 70px;
+  border-radius: 5;
+  border: none;
+}
+
+.join-text {
+  color: red;
   font-weight: 700;
+  font-size: 20px;
 
 }
 
@@ -124,3 +122,27 @@
   color: white;
   background-color: red;
 }
+
+.gift-text {
+  color: red;
+}
+
+.gift-textb {
+  font-weight: 900;
+  color: #070211;
+}
+
+.product {
+  display: flex;
+  gap: 20px;
+  border-radius: 15px;
+  height: 425px;
+  padding: 5px;
+}
+ .items{
+  display: flex;
+  gap: 20px;
+  border-radius: 15px;
+  height: 425px;
+  padding: 5px;
+ }
