--- a/style/style.css
+++ b/style/style.css
@@ -84,13 +84,14 @@
   margin: 70px;
   border-radius: 5;
   border: none;
+
 }
 
 .join-text {
   color: red;
   font-weight: 700;
   font-size: 20px;
-
+  font-weight: 700;
 }
 
 .venu {
@@ -139,10 +140,40 @@
   height: 425px;
   padding: 5px;
 }
- .items{
+
+.items {
   display: flex;
   gap: 20px;
   border-radius: 15px;
   height: 425px;
   padding: 5px;
- }
+}
+
+.subscribe {
+  background-color: linen;
+  margin: 130px 0;
+  padding: 130px;
+  text-align: center;
+}
+
+#input-btn {
+  border: none;
+  border-radius:25px 0 0 25px;
+  background: #FFF;
+  padding: 10px 30px;
+  width: 300px;
+}
+.container{
+  padding-bottom: 100px;
+}
+.sub-btn {
+  position: relative;
+  left: -5px;
+  border: none;
+  border-radius: 0 25px 25px 0;
+  background: #e70404;
+  padding: 10px 30px;
+  font-weight: 600;
+  color: #FFF;
+  width: 150px;
+}
