--- a/style/style.css
+++ b/style/style.css
@@ -154,18 +154,21 @@
   margin: 130px 0;
   padding: 130px;
   text-align: center;
+  border-radius: 10px;
 }
 
 #input-btn {
   border: none;
-  border-radius:25px 0 0 25px;
+  border-radius: 25px 0 0 25px;
   background: #FFF;
   padding: 10px 30px;
   width: 300px;
 }
-.container{
+
+.container {
   padding-bottom: 100px;
 }
+
 .sub-btn {
   position: relative;
   left: -5px;
@@ -176,4 +179,24 @@
   font-weight: 600;
   color: #FFF;
   width: 150px;
+}
+
+footer {
+  background: #000000;
+  padding: 100px;
+  color: #FFF;
+}
+
+.main {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.call {
+  display: inline-block;
+  /* display: flex; */
+  background-image: url('../resources/Call.png');
+  background-repeat: no-repeat;
+  
 }
