--- a/style/style.css
+++ b/style/style.css
@@ -133,6 +133,11 @@
   color: #070211;
 }
 
+/* .mouse{
+  transition: 1s;
+} */
+
+
 .product {
   display: flex;
   gap: 20px;
@@ -140,13 +145,21 @@
   height: 425px;
   padding: 5px;
 }
-
+.product img:hover{
+  transition: 2s;
+  transform: scale(1.3);
+}
 .items {
   display: flex;
   gap: 20px;
   border-radius: 15px;
   height: 425px;
   padding: 5px;
+  
+}
+.items img:hover{
+  transition: 2s;
+  transform: scale(1.3);
 }
 
 .subscribe {
